allow emails other than outlook for signup

--- a/sails-bin/templates/orders/order_info.html
+++ b/sails-bin/templates/orders/order_info.html
@@ -55,7 +55,7 @@
       </div>
       <br>
       <h3>恭喜，您的订单已成功交付！</h2>
-      Enjoy your book! 如有任何疑问或需要售后服务，请联系我们寻求帮助。
+      Enjoy your book! 如有任何疑问或需要售后服务，请<a href="mailto:admin@flibrary.info">联系我们</a>寻求帮助。
       {% endmatch %}
     </div>
 <br>
