--- a/sails-bin/templates/user/signup.html
+++ b/sails-bin/templates/user/signup.html
@@ -19,7 +19,7 @@
 
     <div class="form-floating">
       <input type="email" class="form-control" id="floatingEmail" placeholder="Email" name="user_info[email]">
-      <label for="floatingInput">Outlook 邮箱</label>
+      <label for="floatingInput">邮箱</label>
     </div>
     <div class="form-floating">
       <input type="text" class="form-control" id="floatingName" placeholder="Name" name="user_info[name]">
