--- a/sails-bin/templates/user/signup_instruction.html
+++ b/sails-bin/templates/user/signup_instruction.html
@@ -9,7 +9,7 @@
       <br>
         请去邮箱检查您的收件箱或垃圾文件夹以查看验证邮件。点击邮件中的网址即可完成验证。
       <br>
-        如果您没有在您的收件箱或垃圾文件夹中收到我们的电子邮件，请联系我们寻求帮助。
+        如果您没有在您的收件箱或垃圾文件夹中收到我们的电子邮件，请<a href="mailto:admin@flibrary.info">联系我们</a>寻求帮助。
       </p>
     </div>
     <br>
