--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -7,16 +7,17 @@
     <div class="p-5 text-center">
     <h1 class="display-4 fw-bold">FLibrary</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Where Knowledge Values</p>
-      <a href="/user" class="btn btn-primary" role="button">用户主页</a>
-      <a href="/market/post_book_interim" class="btn btn-warning" role="button">上架书本</a>
+      <p class="lead mb-4">A Community Where Knowledge Values</p>
+      <a href="/store" class="btn btn-primary" role="button">Store 商店</a>
+      <a href="https://circle.flibrary.info" class="btn btn-warning" role="button">Circle 社区</a>
     </div>
     </div>
 
     <br>
 
+    <!--
     <div class="p-5 rounded shadow">
-      <h1>我们有何不同？</h1>
+      <h1>让好奇心为您赋能</h1>
       <div class="row">
 	<div class="col-sm mt-3">
 	  <div class="card h-100">
@@ -47,6 +48,7 @@
 
       </div>
     </div>
+    -->
 </main>
 {% endblock content %}
 
