--- a/sails-bin/templates/user/portal.html
+++ b/sails-bin/templates/user/portal.html
@@ -3,7 +3,7 @@
 
 {% block intro %}在这里您可以管理您上传的书，也可以修改账号的基本信息。{% endblock intro %}
 {% block update_button %}<a href="/user/update_user_page" class="btn btn-primary" role="button">更新</a> <a href="/user/change_passwd" class="btn btn-warning" role="button">更改密码</a>{% endblock update_button %}
-{% block postbook_button %}<a href="/market/post_book_interim" class="btn btn-primary" role="button">上架书本</a>{% endblock postbook_button %}
+{% block postprod_button %}<a href="/store/post_prod" class="btn btn-primary" role="button">上架商品</a>{% endblock postprod_button %}
 {% block orders_placed %}
 <div class="p-5 rounded shadow">
   <h3>您购买的</h3>
