--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -4,7 +4,7 @@
   {% block head %}
   <meta charset="utf-8">
   <title>{% block title %}{% endblock title %} | FLibrary</title>
-  <meta name="description" content="An online second-hand book market">
+  <meta name="description" content="An online learning store and community">
   <meta name="author" content="FLibrary Development Taskforce">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -41,7 +41,6 @@
         <div class="collapse navbar-collapse" id="navbarItems">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="/store">Store</a></li>
-            <li class="nav-item"><a class="nav-link" href="/market">书本市场</a></li>
             <li class="nav-item"><a class="nav-link" href="/messages">消息</a></li>
 	    <li class="nav-item"><a class="nav-link" href="/user">主页</a></li>
 	    {% block navbutton %}{% endblock navbutton %}
