--- a/sails-bin/templates/store/prod_info_guest.html
+++ b/sails-bin/templates/store/prod_info_guest.html
@@ -14,13 +14,13 @@
 	}
 </style>
 {% endblock head %}
-{% block title %}书本信息{% endblock title %}
+{% block title %}{{ prod.get_prodname() }} - 商品信息{% endblock title %}
 
 {% block content %}
 <main class="container">
     <div class="p-5 rounded shadow">
-    {% block book %}
-    <h1>{{ book.get_prodname() }}</h1>
+    {% block prod %}
+    <h1>{{ prod.get_prodname() }}</h1>
     <h4 class="card-subtitle mb-2">
        {% include "display_tag.html" %}
     </h4>
@@ -28,16 +28,16 @@
     <tbody>
     <tr>
       <th scope="row">ID</th>
-      <td>{{ book.get_shortid() }}</td>
+      <td>{{ prod.get_shortid() }}</td>
     </tr>
     <tr>
       <th scope="row">价格</th>
-      <td>CN¥ {{ book.get_price() }}</td>
+      <td>CN¥ {{ prod.get_price() }}</td>
     </tr>
-    <!--<tr>
+    <tr>
       <th scope="row">库存数量</th>
-      <td>{{ book.get_quantity() }}</td>
-    </tr>-->
+      <td>{{ prod.get_quantity() }}</td>
+    </tr>
     <tr>
       <th scope="row">官方指导价</th>
       	{% match category %}
@@ -58,17 +58,17 @@
     </tr>
     <tr>
       <th scope="row">状态</th>
-      <td>{{ "{:?}"|format(book.get_product_status()) }}</td>
+      <td>{{ "{:?}"|format(prod.get_product_status()) }}</td>
     </tr>
     </tbody>
     </table>
-    {% endblock book %}
+    {% endblock prod %}
     {% block actions %}{% endblock actions %}
     </div>
     <br>
 
     <div class="shadow p-5 rounded html-body">
-      {{ book.get_description()|safe }}
+      {{ prod.get_description()|safe }}
     </div>
     <br>
 
