--- a/sails-bin/templates/user/prods.html
+++ b/sails-bin/templates/user/prods.html
@@ -9,9 +9,9 @@
   </div>
   <br>
 
-  {% if tagged.len() > 0 %}
+  {% if disabled_prods.len() > 0 %}
   <div class="shadow p-5 rounded border border-5 border-warning">
-    <h3>Prod with tag "{{tag.get_name()}}"</h3>
+    <h3>Disabled Products</h3>
     <table class="table" data-toggle="table" data-pagination="true" data-search="true">
       <thead>
 	<tr>
@@ -23,13 +23,13 @@
 	</tr>
       </thead>
       <tbody>
-	{% for prod in tagged %}
+	{% for prod in disabled_prods %}
 	<tr>
 	  <th scope="row"><a href="{{ uri!("/store", crate::store::prod_page_owned(prod.get_id())) }}">{{prod.get_shortid()}}</a></th>
 	  <td>{{prod.get_prodname()}}</td>
 	  <td>{{prod.get_price()}}</td>
 	  <td><a href="{{ uri!("/user", crate::user::portal_guest(prod.get_seller_id())) }}">{{prod.get_seller_id()}}</a></td>
-	  <td><a href="{{ uri!("/admin", crate::admin::remove_tag(self.tag.get_id(),prod.get_id())) }}" class="btn btn-warning" role="button">Remove</a></td>
+	  <td><a href="{{ uri!("/admin", crate::admin::verify_prod(prod.get_id())) }}" class="btn btn-primary" role="button">Verify</a></td>
 	</tr>
 	{% endfor %}
       </tbody>
@@ -38,14 +38,15 @@
   <br>
   {% else %}
     <div class="p-5 rounded shadow">
-      <h3>No prod has tag "{{tag.get_name()}}"</h3>
+      <h3>No disabled products</h3>
     </div>
     <br>
-  {% endif %}
+    {% endif %}
 
-  {% if untagged.len() > 0 %}
+
+  {% if verified_prods.len() > 0 %}
   <div class="shadow p-5 rounded border border-5 border-warning">
-    <h3>Prod without tag "{{tag.get_name()}}"</h3>
+    <h3>Verified Products</h3>
     <table class="table" data-toggle="table" data-pagination="true" data-search="true">
       <thead>
 	<tr>
@@ -57,13 +58,13 @@
 	</tr>
       </thead>
       <tbody>
-	{% for prod in untagged %}
+	{% for prod in verified_prods %}
 	<tr>
 	  <th scope="row"><a href="{{ uri!("/store", crate::store::prod_page_owned(prod.get_id())) }}">{{prod.get_shortid()}}</a></th>
 	  <td>{{prod.get_prodname()}}</td>
 	  <td>{{prod.get_price()}}</td>
 	  <td><a href="{{ uri!("/user", crate::user::portal_guest(prod.get_seller_id())) }}">{{prod.get_seller_id()}}</a></td>
-	  <td><a href="{{ uri!("/admin", crate::admin::add_tag(self.tag.get_id(),prod.get_id())) }}" class="btn btn-success" role="button">Add</a></td>
+	  <td><a href="{{ uri!("/admin", crate::admin::disable_prod(prod.get_id())) }}" class="btn btn-warning" role="button">Revert</a></td>
 	</tr>
 	{% endfor %}
       </tbody>
@@ -72,10 +73,9 @@
   <br>
   {% else %}
     <div class="p-5 rounded shadow">
-      <h3>All prods have tag "{{tag.get_name()}}"</h3>
+      <h3>No verified products</h3>
     </div>
     <br>
   {% endif %}
-
 </main>
 {% endblock content %}
