freemium order and digicon order support

--- a/sails-bin/templates/user/portal.html
+++ b/sails-bin/templates/user/portal.html
@@ -1,7 +1,7 @@
 {% extends "portal_guest.html" %}
 {% block title %}用户中心{% endblock title %}
 
-{% block intro %}在这里您可以管理您上传的书，也可以修改账号的基本信息。{% endblock intro %}
+{% block intro %}在这里您可以管理您上传的商品，也可以修改账号的基本信息。{% endblock intro %}
 {% block update_button %}<a href="/user/update_user_page" class="btn btn-primary" role="button">更新</a> <a href="/user/change_passwd" class="btn btn-warning" role="button">更改密码</a>{% endblock update_button %}
 {% block postprod_button %}<a href="/store/post_prod" class="btn btn-primary" role="button">上架商品</a>{% endblock postprod_button %}
 {% block orders_placed %}
