--- a/sails-bin/templates/user/portal_guest.html
+++ b/sails-bin/templates/user/portal_guest.html
@@ -59,7 +59,7 @@
 
   <div class="shadow p-5 rounded html-body">
   {% if prods_owned.len() > 0 %}
-  <h3>此用户上架的书</h3>
+  <h3>此用户上架的内容</h3>
   {% let prods = prods_owned.iter() %}
   <table class="table" data-toggle="table" data-pagination="true" data-search="true">
     <thead>
