--- a/sails-bin/templates/orders/order_info.html
+++ b/sails-bin/templates/orders/order_info.html
@@ -58,7 +58,7 @@
       </div>
       <br>
       <h3>恭喜您，您的订单已成功交付！</h2>
-      数字内容可通过<a href="{{ uri!("/store", crate::store::prod_page_owned(self.prod.get_id())) }}">商品简介</a>中的链接访问。如有任何疑问或需要售后服务，请<a href="mailto:admin@flibrary.info">联系我们</a>寻求帮助。
+      如购买了数字内容，您可在<a href="/user">用户主页</a>中访问。如有任何疑问或需要售后服务，请<a href="mailto:admin@flibrary.info">联系我们</a>寻求帮助。
       {% endmatch %}
     </div>
 <br>
