--- a/sails-bin/templates/user/portal_guest.html
+++ b/sails-bin/templates/user/portal_guest.html
@@ -86,6 +86,7 @@
   </div>
   <br>
 
+  {% block digicons_owned %}{% endblock digicons_owned %}
   {% block orders_placed %}{% endblock orders_placed %}
   {% block orders_received %}{% endblock orders_received %}
 </main>
