apply clippy suggestions

--- a/sails-bin/templates/root/user_status.html
+++ b/sails-bin/templates/root/user_status.html
@@ -41,6 +41,10 @@
 	  <td>{{ sails_db::enums::UserStatus::ADMIN.bits() }}</td>
 	</tr>
 	<tr>
+	  <th scope="row">Content Creator</th>
+	  <td>{{ sails_db::enums::UserStatus::CONTENT_CREATOR.bits() }}</td>
+	</tr>
+	<tr>
 	  <th scope="row">Storekeeper</th>
 	  <td>{{ sails_db::enums::UserStatus::STORE_KEEPER.bits() }}</td>
 	</tr>
